exports[`Normal List > should save changes > when adding items #0`] =
{
  "isShared": false,
  "items": [
    {
      "done": false,
      "item": "test item"
    },
    {
      "done": false,
      "item": "new item"
    }
  ],
  "name": "test list",
  "version": "1.2"
};

exports[`Normal List > should save changes > when changing the title #0`] =
{
  "isShared": false,
  "items": [
    {
      "done": false,
      "item": "test item"
    },
    {
      "done": false,
      "item": "new item"
    }
  ],
  "name": "new title",
  "version": "1.2"
};
